--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -179,6 +179,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLClient\ECS\CStageMiddleBossAction.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\AStageAreaCameraTirgger.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\JumpPlatform.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Jump.cpp" />
     <ClCompile Include="src\DUOLClient\Script\ScriptInfo.cpp" />
@@ -281,6 +283,8 @@
     <ClCompile Include="src\DUOLClient\ECS\Component\TrainAnimation.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLClient\ECS\Component\CStageMiddleBossAction.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\AStageAreaCameraTirgger.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\BossZoneTrigger.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\BStageCameraColiision.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\BStageFactoryTrigger.h" />
