--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -103,6 +103,7 @@
     <ClCompile Include="src\DUOLClient\Script\ScriptInfo.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\AStageAreaCameraTirgger.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\CStageMiddleBossAction.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\CStageEliteCameraTrigger.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemySoundUpdate.h" />
@@ -214,5 +215,6 @@
     <ClInclude Include="include\DUOLClient\Script\ScriptInfo.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\AStageAreaCameraTirgger.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\CStageMiddleBossAction.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\CStageEliteCameraTrigger.h" />
   </ItemGroup>
 </Project>
