컨텐츠 프로그래밍. 연출 애니메이션 스크립트 작성

--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -179,6 +179,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLClient\Script\AnimationScript\BossMonsterScript.cpp" />
+    <ClCompile Include="src\DUOLClient\Script\AnimationScript\DummyMonoBehavior.cpp" />
+    <ClCompile Include="src\DUOLClient\Script\AnimationScript\EliteMonsterScript.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\CStageEliteCameraTrigger.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\CStageMiddleBossAction.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\AStageAreaCameraTirgger.cpp" />
@@ -284,7 +287,6 @@
     <ClCompile Include="src\DUOLClient\ECS\Component\TrainAnimation.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\DUOLClient\ECS\Component\CStageEliteCameraTrigger.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\CStageMiddleBossAction.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\AStageAreaCameraTirgger.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\BossZoneTrigger.h" />
@@ -327,6 +329,9 @@
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemySpawnTrigger.h" />
     <ClInclude Include="include\DUOLClient\Manager\UIDataManager.h" />
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Ultimate.h" />
+    <ClInclude Include="include\DUOLClient\Script\AnimationScript\BossMonsterScript.h" />
+    <ClInclude Include="include\DUOLClient\Script\AnimationScript\DummyMonoBehavior.h" />
+    <ClInclude Include="include\DUOLClient\Script\AnimationScript\EliteMonsterScript.h" />
     <ClInclude Include="include\DUOLClient\Script\InteractiveScript.h" />
     <ClInclude Include="include\DUOLClient\Script\ScriptInfo.h" />
     <ClInclude Include="include\DUOLClient\Util\BinaryTree.h" />
