--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -102,7 +102,7 @@
     <ClCompile Include="src\DUOLClient\Script\InteractiveScript.cpp" />
     <ClCompile Include="src\DUOLClient\Script\ScriptInfo.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\AStageAreaCameraTirgger.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\CStageMiddleBossAction.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\CStageBossCameraTrigger.cpp" />
     <ClCompile Include="src\DUOLClient\Script\AnimationScript\EliteMonsterScript.cpp" />
     <ClCompile Include="src\DUOLClient\Script\AnimationScript\DummyMonoBehavior.cpp" />
     <ClCompile Include="src\DUOLClient\Script\AnimationScript\BossMonsterScript.cpp" />
@@ -217,7 +217,7 @@
     <ClInclude Include="include\DUOLClient\Script\InteractiveScript.h" />
     <ClInclude Include="include\DUOLClient\Script\ScriptInfo.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\AStageAreaCameraTirgger.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\CStageMiddleBossAction.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\CStageBossCameraTrigger.h" />
     <ClInclude Include="include\DUOLClient\Script\AnimationScript\EliteMonsterScript.h" />
     <ClInclude Include="include\DUOLClient\Script\AnimationScript\BossMonsterScript.h" />
     <ClInclude Include="include\DUOLClient\Script\AnimationScript\DummyMonoBehavior.h" />
